tests/packaging-test/test_out/invalid-version-parse-out.txt
error: expected Ident but got '{'
 --> invalid-version\package.ctlm:1:6
  |
1 | deps { water git "github.com/jakubDoka/water" "ajdakjshdkajshdka" }
  |      ^ token located here
  |
  = info: manifest -> list -> manifest dependency -> name

error: expected String but got '{'
 --> invalid-version\package.ctlm:1:6
  |
1 | deps { water git "github.com/jakubDoka/water" "ajdakjshdkajshdka" }
  |      ^ token located here
  |
  = info: manifest -> list -> manifest dependency

error: expected '\n' | ';' | ']' but got <eof>
 --> invalid-version\package.ctlm:1:68
  |
1 | deps { water git "github.com/jakubDoka/water" "ajdakjshdkajshdka" }
  |                                                                     token located here
  |
  = info: manifest -> list

